# Soccer_Race

./: .gitmodules  2021-07-22-21-37-30.bag  2021-07-22-21-51-05.bag  README.md  imu_calibration.bag
install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
install/include/realsense2_camera/: IMUdata.h
install/include/realsense2_camera/Get_D435i_IMU/: Get_D435i_IMU.h
install/include/realsense2_camera/imu_filter/: imu_filter_ros.h
install/include/strategy/: DeepMatrix.h
install/include/tku_msgs/: AllLineData.h  BGRInfo.h  BGRInfoRequest.h  BGRInfoResponse.h  BGRValue.h  GetVelocity.h  HoughInfo.h  HoughInfoRequest.h  HoughInfoResponse.h  HoughValue.h  LineData.h  ObservationData.h  Parameter_message.h  SensorSet.h  parameter.h
install/lib/pkgconfig/: localization.pc  motionpackage.pc  realsense2_camera.pc  realsense2_description.pc  strategy.pc  tku_libs.pc  tku_msgs.pc  usb_cam.pc  vision.pc  walkinggait.pc
install/lib/realsense2_camera/: imu_filter_node
install/lib/usb_cam/: usb_cam_node
install/share/localization/cmake/: localizationConfig.cmake
install/share/motionpackage/cmake/: motionpackageConfig.cmake
src/strategy/: CMakeLists.txt  package.xml
src/strategy/Kidsize_HuroCup/: SendObservation_main.cpp  strategy_main.cpp  video_strategy.cpp  wstrategy.cpp
src/strategy/Kidsize_RoboCup/: getimudata_compare.cpp  wstrategy.cpp
src/strategy/Kidsize_RoboCup/attacker/: head_strategy.cpp  strategy_main.cpp
src/strategy/Kidsize_RoboCup/collaboration/: example_strategy_main.cpp  strategy_main.cpp
src/strategy/Kidsize_RoboCup/goalkeeper/: head_strategy.cpp  strategy_main.cpp
src/strategy/Kidsize_RoboCup/substitute/: strategy_main.cpp
src/strategy/Parameter/: 20200621.ini  BGR_Value.ini  CameraSet.ini  ColorModelData.ini  Continuous_Back.ini  Continuous_Parameter.ini  Continuous_Second_Parameter.ini  Hough_Value.ini  RobotCupInfo.yaml  Single_Parameter.ini  Single_third.ini  Single_wood.ini  WalkingGait.ini  back_stand_up.ini  crw.ini  crw_.ini  file.txt  firstmove.ini  front_stand_up.ini  handup.ini  standup1.ini
src/strategy/Parameter/Data/: HeadPosition_Record.csv  IMU_Record.csv
src/strategy/Parameter/sector/: 1.ini  2.ini  4.ini  5.ini  6.ini  8.ini
src/strategy/include/strategy/: .h  SendObservation_main.h  strategy_main.h  wstrategy.h
src/strategy/include/strategy/attacker/: head_strategy.h  strategy_main.h
src/strategy/include/strategy/collaboration/: example_strategy_main.h  strategy_main.h
src/strategy/include/strategy/goalkeeper/: head_strategy.h  strategy_main.h
src/strategy/msg/: DeepMatrix.msg
(+142 files in other folders)
